# esp32c3-scaffold

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
