[package]
name    = "esp32c3-scaffold"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal   = { version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { version = "=1.0.0-alpha.9", optional = true, package = "embedded-hal" }
esp-backtrace  = { version = "0.4.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println    = { version = "0.3.1", features = ["esp32c3"] }
esp-riscv-rt   = { version = "0.1.0", optional = true }
r0             = "1.0.0"

[dependencies.esp-hal-common]
git      = "https://github.com/esp-rs/esp-hal.git"
features = ["esp32c3"]
version  = "0.5.0"

[dependencies.esp32c3-hal]
git     = "https://github.com/esp-rs/esp-hal.git"
version = "0.5.0"

[dev-dependencies]

[features]
default = ["rt", "esp-hal-common/vectored"]
rt      = ["esp-riscv-rt"]
