[package]
name    = "esp32c3-scaffold"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32c3-hal   = { version = "0.9.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println   = { version = "0.5.0", features = ["esp32c3"] }
